# fantasy-analytics

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  analyse_db.py  gather_data.py  gather_match_data.py  load_db.py  main.py  pyproject.toml  sofascore.ipynb  testing.py
.github/workflows/: ci.yaml
src/fantasy_analytics/: __init__.py  custom_fbref.py  data_cleaning.py  gather_team_data.py  get_matches.py  get_seasons.py  get_teams.py  load_db.py  load_matches.py  load_to_db.py  main.py
tests/: test_example.py
