[project]
name = "fantasy-analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.29.5",
    "mplsoccer>=1.4.0",
    "scraperfc>=3.3.0",
    "selenium>=4.31.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pandas-stubs>=2.2.3.250308",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "ruff>=0.11.6",
    "types-beautifulsoup4>=4.12.0.20250204",
    "types-requests>=2.32.0.20250328",
]
